--- a/style.css
+++ b/style.css
@@ -133,8 +133,16 @@ section img {
     }
 
     .modal-textos {
-        font-size: 2.5vh;
-    
+        height: 30%;
+    }
+
+    .parrafo {
+        display: none;
+    }
+
+    .close {
+        top: 10px;
+        right: 10px;
     }
     
     
